libraries/ckit/regression/valid-programs/a118.c
extern struct foo *fp;

struct bar {
  struct foo *l;
};

main (){
  int i;

  return 0;

}
