libraries/ckit/regression/invalid-programs/r53.c
struct X { 
  int t(int);
  int y;
};


main(){
 return(0);
}
